--- a/css/nav.css
+++ b/css/nav.css
@@ -5,7 +5,6 @@ nav.nav{
   height: 120px;
   margin: 0 auto;
   
-  
 }
 div.logo{
   background-image: url("../image/logo.png");
@@ -70,7 +69,7 @@ ul.adoption_list , ul.health_list, ul.location_list{
   top:90%;
   background-color: #e7f5de;
 
-  /*display: none;*/
+  display: none;
 }
 ul.adoption_list >li , ul.health_list >li, ul.location_list >li{
   list-style:none;
