--- a/css/banner.css
+++ b/css/banner.css
@@ -1,4 +1,3 @@
-
 article{
   width: 1200px;
   height: 800px;
@@ -170,7 +169,7 @@ div.mask div.cat{
 div.scroll{
   width: 105px;
   height: 125px;
-  border:1px solid black;
+  /* border:1px solid black; */
   color: #5E454B;
   font-size: 30px;
   text-align: center;
