--- a/css/nav.css
+++ b/css/nav.css
@@ -18,10 +18,9 @@ div.logo{
 div.list{
   float:right;
   display: inline-block;
-
 }
 ul.nav_list{
-  margin:0;
+  margin-right:20px;
   padding:0;
   font-size:0;
   left:10px;
@@ -95,4 +94,13 @@ div.adoption::after, div.health::after, div.location::after{
   border-top:10px solid #5E454B;
   border-bottom:0px solid blue;
   display:inline-block;
+}
+div.list a.heart{
+  color:red;
+  width:55px;
+  height: 55px;
+  margin: 5px;
+  position: absolute;
+  right: 0px;
+  top:40px;
 }
