--- a/css/homepage_adopt.css
+++ b/css/homepage_adopt.css
@@ -40,11 +40,11 @@ div.find div.find_link{
     border:1px solid #5E454B;
     width: 130px;
     height: 45px;
-    background-color: #E7F5DE;
+    background-color: #3EB3B2;
     border-radius: 3px;
     position: absolute;
-    top:0px;
-    left:20px;
+    top:25px;
+    left:0px;
     text-align: center;
     font-size: 25px;
     display:none;
@@ -77,6 +77,7 @@ div.adopt_select a.adopt_pick{
 }
 div.adopt_select a.adopt_pick >img{
     max-width: 100%;
+    z-index: 0;
 }
 
 div.adopt_select div.select_word{
@@ -96,3 +97,40 @@ div.adopt_select div.select_word{
 div.adopt_select:hover div.select_word{
     display: inline-block;
 }
+
+span.heart {
+    color:white;
+    width:25px;
+    height: 20px;
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 3;
+    border: 1px solid black;
+  }
+  span.heart:hover {
+    color:red;
+    width:25px;
+    height: 20px;
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 2;
+    border: 1px solid black;
+  }
+
+  span.heart_on {
+    color:red;
+    width:25px;
+    height: 20px;
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 2;
+    border: 1px solid black;
+  }
+  
+  
