--- a/css/homepage_news.css
+++ b/css/homepage_news.css
@@ -25,6 +25,7 @@ section.newsarea{
     width: 1045px;
     display: flex;
     flex-wrap:wrap;
+    justify-content:space-around;
     position: absolute;
     top:170px;
 }
@@ -36,7 +37,7 @@ section.newsarea div.newspick{
     overflow: hidden;
     position: relative;
     z-index: 0;
-    margin: 23px;
+    margin: 40px;
 }
 div.newspick >a{
     display: block;
@@ -55,7 +56,26 @@ div.newspick div.newsword{
     z-index: 1;
     position: absolute;
     bottom: 0;
+    
+}
+ div.newsword >h1{
+    color:#5E454B;
+    text-align: center;
+    font-size: 20px;
+    margin: 0 auto;
+ }
+ div.newsword >h2{
+    border:1px solid #5E454B;
+    display: -webkit-box;
+    width: 225px;
+    height: 65px;
+    margin: 0 auto;
+    color:#5E454B;
     font-size: 16px;
+    word-break: break-all;
     text-overflow: ellipsis;
-    word-wrap: break-word;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+      
 }
