--- a/css/homepage_news.css
+++ b/css/homepage_news.css
@@ -21,7 +21,7 @@ div.newstitle{
     left:37px;
 }
 section.newsarea{
-     border: 1px solid black; 
+     /* border: 1px solid black;  */
     width: 1045px;
     display: flex;
     flex-wrap:wrap;
@@ -65,7 +65,7 @@ div.newspick div.newsword{
     margin: 0 auto;
  }
  div.newsword >h2{
-    border:1px solid #5E454B;
+    /* border:1px solid #5E454B; */
     display: -webkit-box;
     width: 225px;
     height: 65px;
@@ -77,5 +77,10 @@ div.newspick div.newsword{
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
-      
+}
+div.newstitle >div{
+    width: 980px;
+    margin: 0 auto;
+    margin-top: 10px;
+    display: inline-block;
 }
