--- a/css/banner.css
+++ b/css/banner.css
@@ -1,9 +1,12 @@
-article{
+article.banner{
   width: 1200px;
   height: 800px;
-  margin-left: 360px;
-  margin-right: 360px;
+  margin: 0 auto;
   position: relative;
+}
+article.bnner div.banner_container{
+  position: relative;
+  top:120px;
 }
 div.carousel{
  border: 1px solid black;
