--- a/css/homepage_adopt.css
+++ b/css/homepage_adopt.css
@@ -1,11 +1,18 @@
+article.adopt{
+    width: 1200px;
+    margin: 0 auto;
+    position: relative;
+}
+
 div.home_adopt{
     /* border:1px solid black; */
     width: 1045px;
     height: 865px;
     background-color: #ECDFC3;
-    margin-left: 360px;
-    position: relative;
+    /* margin-left: 360px; */
+    position: absolute;
     font-size: 0;
+    right: 0;
 }
 div.home_title{
     border:1px solid #5E454B;
