--- a/css/nav.css
+++ b/css/nav.css
@@ -5,6 +5,7 @@ nav.nav{
   height: 120px;
   margin: 0 auto;
   position: relative;
+  order:1;
 }
 div.logo{
   background-image: url("../image/logo.png");
