--- a/css/body.css
+++ b/css/body.css
@@ -2,5 +2,9 @@
   box-sizing: border-box;
 }
 body{
-  margin: 0;
+  margin: 0 auto;
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
