--- a/css/hompage_talk.css
+++ b/css/hompage_talk.css
@@ -108,17 +108,24 @@ div.talk1_talk > div{
 div.talk2_talk {
     width: 450px;
     height: 450px;
-    /* border:1px solid red; */
+    /* border:1px   solid red; */
     display: inline-block;
     position: absolute;
     left: 170px;
     top:50px;
+    
 }
 div.talk2_talk > div{
     position: absolute;
     bottom: 100px;
     right: 200px;
 }
+div.talk2_talk > div div.talkword{
+    position: absolute;
+    left:400px;
+    top:100px;
+}
+
 div.talk3_talk {
     width: 450px;
     height: 450px;
@@ -204,4 +211,9 @@ div.talk8_talk > div{
     position: absolute;
     bottom: 50px;
     right: 100px;
+}
+div.talk8_talk > div div.talkword{
+    position: absolute;
+    left:400px;
+    top:20px;
 }
