--- a/css/adopt_choose.css
+++ b/css/adopt_choose.css
@@ -42,7 +42,7 @@ div.select_locat{
     height: 80px;
     /* border: 1px solid black; */
     margin-top: 25px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin-left:10px;
     margin-right:10px;
     color:#3EB3B2;
@@ -70,7 +70,29 @@ div.checkbox{
 }
 
 div.checkbox div.gender{
-    margin-bottom: 10px;
+    margin-top:5px;
+    margin-bottom: 15px;
     margin-left:5px;
     margin-right:5px;
+}
+
+div.choose div.health_check{
+    width: 210px;
+    height: 80px;
+    /* border: 1px solid black; */
+    margin-left:5px;
+    margin-right:5px;
+    color:#3EB3B2;
+    font-size: 16px;
+    color: #5E454B;
+}
+
+div.choose button{
+    margin-top: 20px;
+    width: 200px;
+    height: 30px;
+    font-size: 18px;
+    border-radius: 10px;
+    background-color: #5E454B;
+    color:#E7F5DE;
 }
