--- a/css/nav_normal.css
+++ b/css/nav_normal.css
@@ -95,7 +95,9 @@ nav.nav_on{
     color: #E7F5D4;
   }
   
-  div.adoption::after, div.health::after, div.location::after{
+  div.list div.adoption::after,
+  div.list div.health::after,
+  div.list div.location::after{
     content:'';
     border-left:5px solid transparent;
     border-right:5px solid transparent;
