--- a/css/adopt_flex.css
+++ b/css/adopt_flex.css
@@ -57,6 +57,7 @@ span.heart {
     top: 10px;
     right: 10px;
     z-index: 3;
+    font-size: 18px;
     /* border: 1px solid black; */
   }
   span.heart:hover {
