--- a/css/homepage-aside.css
+++ b/css/homepage-aside.css
@@ -26,6 +26,7 @@ div.top{
     position: absolute;
     bottom: 150px;
     left: 50px;
+    animation-duration: 10s;
   }
 div.top span.circle{
     border:3px solid #5E454B;
@@ -61,4 +62,5 @@ div.top span.circle{
      position: absolute  ;
     bottom:0;
     left:0; 
+    
   }
