--- a/css/homepage_adopt.css
+++ b/css/homepage_adopt.css
@@ -121,7 +121,8 @@ span.heart {
     top: 10px;
     right: 10px;
     z-index: 3;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    font-size: 18px;
   }
   span.heart:hover {
     color:red;
@@ -132,7 +133,7 @@ span.heart {
     top: 10px;
     right: 10px;
     z-index: 2;
-    border: 1px solid black;
+    /* border: 1px solid black; */
   }
 
   span.heart_on {
@@ -144,7 +145,8 @@ span.heart {
     top: 10px;
     right: 10px;
     z-index: 2;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    /* font-size: 16px; */
   }
   
   
