--- a/css/homepage_news.css
+++ b/css/homepage_news.css
@@ -86,6 +86,7 @@ div.newspick div.newsword{
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    text-align: left;
 }
 div.newstitle >div{
     width: 980px;
