--- a/css/news_banner.css
+++ b/css/news_banner.css
@@ -4,7 +4,7 @@ article.banner{
     display:inline-block;
     position: relative;
     margin: 0 auto;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 article.banner div.banner_photo{
@@ -31,6 +31,7 @@ article.banner div.wave{
     z-index: 1;
     display: inline-block;
     bottom: 0;
+    left: 0;
     animation-name: scale;
     animation-duration: 2s;
     animation-delay: 1s;
