--- a/css/info_main.css
+++ b/css/info_main.css
@@ -170,7 +170,7 @@ article.information div.table{
     margin: 0 auto;
     width: 1000px;
     height: 100px;
-    border:1px solid black;
+    /* border:1px solid black; */
     display: flex;
     flex-wrap: wrap;
     justify-content:center;
@@ -186,6 +186,7 @@ article.information div.table{
      display: flex;
      flex-direction: row;
      text-align: center;
+     
  }
 
  div.table > ul > li{
@@ -195,9 +196,10 @@ article.information div.table{
      display: inline-block;
      height: 50px;
      width: 125px;
-     border:1px solid blue;
+     border:1px solid black;
      margin: 0;
      padding: 10px;
+     
      
  }
 
