--- a/css/reserve_main.css
+++ b/css/reserve_main.css
@@ -1,6 +1,6 @@
 main{
     width: 1200px;
-    height: 1700px;
+    /* height: 1700px; */
     margin: 0 auto;
     /* border: 1px solid black; */
     position: relative;
@@ -26,49 +26,129 @@ main article.reserve_area{
     width: 1070px;
     height: 980px;
     background-color: white;
-    /* border: 1px solid black; */
+    border: 1px solid #E7F5DE;
     border-radius: 28px;
     margin: 0 auto;
     margin-top:105px;
-    overflow: auto;
-    display: flex;
-    flex-wrap: wrap;
+    position: relative;
 }
 article.reserve_area section.animal{
 width: 415px;
-height: 515px;
+height: 575px;
 border-radius: 28px;
 border: 1px solid #3EB3B2;
-margin: 0 auto;
-margin-top:30px;
-display: inline-block;
-position: relative;
 background-color: #E7F5DE;
+display: inline-block;
+position: absolute;
+top: 30px;
+left: 30px;
+}
+
+main section.animal > h1,
+main section.form div.show> h1,
+main section.condition> h1
+
+{
+    /* border: 1px solid black; */
+    color: #5E454B;
+    font-size: 28px;
+    text-align: center;
+    margin: 0;
+    margin-top: 10px;
 }
 
 section.animal div.photo{
     width: 365px;
-    height:231px;
-    border: 1px solid #3EB3B2;
+    height:230px;
+    /* border: 1px solid #3EB3B2; */
     border-radius: 28px;
     overflow: hidden;
-    margin: 20px;
+    margin: 25px;
     display: inline-block;
 }
 section.animal div.photo >img{
     max-width: 100%;
 }
 
-section.animal div.word{
-    width: 388px;
-    height: 240px;
+
+
+section.animal div.info{
+    width: 280px;
+    height: 215px;
     display: inline-block;
-    line-height: 1.4;
-    font-size: 30px;
+    line-height: 1.8;
+    font-size: 21px;
     color: #3EB3B2;
     position: absolute;
-    top:20px;
+    bottom:34px;
+    left: 30px;
 }
+
+section.form{
+    width: 555px;
+    height: 575px;
+    overflow: hidden;
+    display: inline-block;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+}
+section.form div.cover_on{
+    width: 555px;
+    height: 575px;
+    background-color: white;
+    font-size: 16px;
+    text-align: center;
+    z-index: 1;
+    position: absolute;
+    top:0;
+    left: 0;
+    border-radius: 10px;
+    display: inline-block;
+    border: 2px solid #3EB3B2;
+    color: #5E454B;
+    line-height: 2;
+}
+section.form div.cover_on >h2{
+    margin-top: 150px;
+}
+section.form div.cover_on >hr,
+section.form div.show >hr,
+{
+    width: 430px;
+    background-color: #3EB3B2;
+}
+
+
+section.form div.show{
+    width: 555px;
+    height: 575px;
+    background-color: white;
+    font-size: 16px;
+   
+    z-index: 0;
+    position: absolute;
+    top:0;
+    left: 0;
+    display: inline-block;
+    color: #5E454B;
+    /* border: 1px solid black; */
+}
+
+div.show div.table{
+    width: 350px;
+    line-height: 3;
+    /* border: 1px solid black; */
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+
+div.show div.check{
+    margin-top: 120px;
+    margin-left: 150px;
+}
+
+
 
 button.reserve{
     width: 163px;
@@ -80,8 +160,87 @@ button.reserve{
     position: absolute;
     bottom:20px;
     right: 16px;
-}
-button.reserve >a{
     color: #ECDFC3;
-    text-decoration: none;
 }
+
+section.condition{
+    width: 1000px;
+    height: 340px;
+    border: 1px solid #3EB3B2;
+    border-radius: 33px;
+    padding: 20px;
+    margin: 20px;
+    position: absolute;
+    bottom: 0px;
+    left: 5px;
+    display: inline-block;
+    color: #5E454B;
+}
+section.condition div{
+    width: 450px;
+    display: inline-block;
+    position: relative;
+    vertical-align: top;
+    margin: 10px;
+}
+section.condition div ul{
+    line-height: 1.8;
+}
+
+article.step{
+    width: 1100px;
+    margin: 0 auto;
+    margin-top: 50px;
+    position: relative;
+}
+article.step >h1{
+    /* border: 1px solid black; */
+    color: #5E454B;
+    font-size: 28px;
+    margin: 0;
+    margin-top: 10px;
+}
+article.step >hr{
+    background-color: #3EB3B2;
+}
+
+article.step section._flex{
+    width: 1100px;
+    height: 250px;
+    display: flex;
+    border: 1px solid black;
+}
+
+div.number{
+    width: 70px;
+    height: 70px;
+    /* border: 1px solid red; */
+    position: relative;
+    color: #5E454B;
+}
+div.number span.triangle{
+    display: inline-block;
+    
+  /*   border: 50px solid red; */
+    
+    border-left: 40px solid #3EB3B2;
+    border-right: 0px solid green;
+    border-top: 35px solid transparent;
+    border-bottom: 35px solid transparent;
+    width:0px;
+    height:0px;
+    position: relative;
+    z-index: 0;
+  }
+
+  div.number span.count{
+      font-size: 28px;
+      position: absolute;
+      z-index: 1;
+      top: 50%;
+      transform: translate(-50%,-50%);
+      left:20%;
+      
+  }
+
+  
