--- a/css/hospital_main.css
+++ b/css/hospital_main.css
@@ -1,7 +1,7 @@
 main{
     width: 1200px;
     margin: 0 auto;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     position: relative;
     background-color: #ECDFC3;
 }
