--- a/css/nav_normal.css
+++ b/css/nav_normal.css
@@ -116,3 +116,19 @@ nav.nav_on{
     cursor: pointer;
   }
   
+
+  
+
+  /*滑動顯示下拉選單  */
+div.adoption:hover ul.adoption_list{
+  display: inline-block;
+}
+ 
+
+ div.health:hover ul.health_list{
+  display: inline-block;
+ }
+
+  div.location:hover ul.location_list{
+  display: inline-block;
+  }
