麵包跟導覽顏色調整，a連結

--- a/css/adopt_body.css
+++ b/css/adopt_body.css
@@ -24,3 +24,11 @@
   footer{
       order: 4;
   }
+
+  nav.nav_on div.adoption,
+  nav.nav_on div.adoption ul li:nth-child(1){
+    background-color: #3EB3B2;
+  }
+  main div.bread >span{
+    color: #5E454B;
+  }
