--- a/css/address_body.css
+++ b/css/address_body.css
@@ -17,3 +17,14 @@
   footer{
       order: 3;
   }
+
+  nav.nav_on div.location{
+    background-color: #3EB3B2;
+  }
+ 
+  nav.nav_on div.location ul > li:nth-child(1){
+    background-color: #3EB3B2;
+  }
+  main div.bread >span{
+    color: #5E454B;
+  }
