--- a/css/homepage-aside.css
+++ b/css/homepage-aside.css
@@ -7,8 +7,18 @@ aside {
   left:10px;
 }
 aside div.aside{
-  width: 280px;
-  height: 930px;
+  width: 150px;
+  height: 150px;
+  display: inline-block;
+  position: absolute;
+  /* border:1px solid black; */
+  z-index: 10;
+  top: 1600px;
+  left: 0px;
+}
+aside div.aside_on{
+  width: 150px;
+    height: 150px;
   display: inline-block;
   position: fixed;
   /* border:1px solid black; */
@@ -16,44 +26,45 @@ aside div.aside{
   bottom: 0px;
   left: 0px;
 }
+
 div.top{
-    width: 105px;
-    height: 125px;
+    width: 55px;
+    height: 55px;
     /* border:1px solid black; */
     color: #5E454B;
-    font-size: 30px;
+    font-size: 10px;
     text-align: center;
     position: absolute;
-    bottom: 150px;
-    left: 50px;
+    bottom: 80px;
+    left: 30px;
     animation-duration: 10s;
   }
 div.top span.circle{
     border:3px solid #5E454B;
-    width:25px;
-    height: 25px;
+    width:10px;
+    height: 10px;
     border-radius: 25px;
     display: block;
     position: absolute;
-    bottom:0px ;
-    left:40px; 
+    bottom:-10px ;
+    left:25px; 
   }
   div.top span.triangle{
     display: inline-block;
     width: 0;
     height: 0;
     position: absolute;
-    bottom:40px ;
-    left:27px;  
+    bottom:10px ;
+    left:15px;  
   
     border-top: 0px solid #5E454B;
-    border-right: 27px solid transparent;
-    border-bottom: 36px solid #5E454B;
-    border-left: 27px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 20px solid #5E454B;
+    border-left: 15px solid transparent;
   }
   aside  div.cat_top{
-    width:223px;
-    height: 170px;
+    width:120px;
+    height: 80px;
     background-image: url("../image/cattop.png");
     background-repeat: no-repeat;
     background-size: contain;
@@ -61,6 +72,6 @@ div.top span.circle{
     display: block;
      position: absolute  ;
     bottom:0;
-    left:0; 
+    left:20px; 
     
   }
