--- a/css/nav_down.css
+++ b/css/nav_down.css
@@ -44,7 +44,7 @@ nav.nav_on div.list ul.nav_list > li > a{
   padding-left:13px;
   padding-right:13px;
   color: #5E454B;
-  /* height: 100px; */
+  height: 100px;
 }
 nav.nav_on div.list ul.nav_list > li > a:hover{
   background-color: #5E454B;
@@ -61,7 +61,7 @@ nav.nav_on div.list div.location{
   padding-right:13px;
   position:relative;
   color: #5E454B;
-  /* height: 100px; */
+  height: 100px;
 }
 
 /* 下拉選單  設定click啟動*/
@@ -86,7 +86,7 @@ ul.adoption_list >li >a , ul.health_list >li >a, ul.location_list >li >a{
   color: #5E454B;
   display:inline-block;
   text-decoration: none;
-  width: 140px;
+  width: 150px;
   text-align: center;
   padding: 10px 5px;
 }
